--- a/.github/workflows/brain_games.yml
+++ b/.github/workflows/brain_games.yml
@@ -26,5 +26,8 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
+      - name: Install flake8
+        run: python -m pip install flake8
+
       - name: Start linter
         run: make lint
