--- a/.github/workflows/brain_games.yml
+++ b/.github/workflows/brain_games.yml
@@ -26,6 +26,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
+      - name: Install dependencies
+        run: |
+          pip install poetry
+          make install
       - name: Install flake8
         run: python -m pip install flake8
 
