--- a/setup.cfg
+++ b/setup.cfg
@@ -11,11 +11,11 @@ enable-extensions = G
 isort-show-traceback = True
 
 # clean default ignore list
-ignore =
+ignore = WPS421
 
 per-file-ignores =
   # it is possibble to have prints in scripts
-  hexlet_python_package/scripts/*.py: WPS421
+  brain_games/scripts/*.py: WPS421
 
 [tool:pytest]
 norecursedirs = __pycache__
