--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ enable-extensions = G
 isort-show-traceback = True
 
 # clean default ignore list
-ignore = WPS421
+ignore = WPS421, DAR101, DAR201, WPS463, B007, WPS111, S311, WPS210, E501
 
 per-file-ignores =
   # it is possibble to have prints in scripts
