--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Five the brain games by Alexander Pavlov"
 classifiers = [
     "Topic :: Software Development :: Brain Games"
 ]
-repository = ["https://github.com/TurtleOld/python-project-lvl1"]
+repository = "https://github.com/TurtleOld/python-project-lvl1"
 authors = ["TurtleOld <shurpo.alexander@gmail.com>"]
 packages = [
     { include = "brain_games" },
